Armitage Changelog
==================

In Progress
--------
- Meterpreter -> Kill now uses session.stop RPC call
- Simplified code to stop a running job

7 Jun 12 - Adding on to those quick bug fixes / tweaks
--------
- Disabled Nagles algorithm for team server and client SSL sockets.
  This makes team server much more responsive... trust me.
- Fixed bug preventing Armitage from showing "Started Service" 
  message when starting the SOCKS Proxy server.
- Fixed a find feature highlight bug in the View tab.

30 May 12 - A few quick bug fixes / tweaks...
---------
- Fixed an exception when killing a session or removing a route 
  through the UI. 
- Oooh, ps command added a new column to its output. Updated ps  
  parser to handle this.
- Hosts -> Import Hosts now works under Windows again. Had to 
  escape the filename. *sigh*
- Hail Mary now sets LHOST option. This is necessary for some 
  attacks to work properly.
- Tweaked console create code in beginning of Armitage setup to 
  hopefully avoid aggravating the evil console.create deadlock
  condition.

21 May 12
---------
- Added a hack to prevent the input area from flickering when the 
  prompt changes.
- Updated the color palette to something a little more subtle.
- Added an optimization to how modules are launched. This will make
  a difference for team use in high latency situations.
- Rewrote MSF Scans feature to use console queue. This option is more
  reliable and it makes the code easier to follow.
- Added a hack to combine chat message writes with a read request.
  This will make the event log more responsive in a high latency 
  situation (can't you tell I care about this "situation")
- Fixed text highlights through Ctrl+F on Windows. UNIX platforms 
  were always OK. Another good reason to not use these tools on 
  Windows. Ever.
- View -> Downloads Sync Files feature now works on Windows. It looks
  like leaving those pesky :'s in the file paths is bad.

17 May 12
---------